--- a/templates/website.html
+++ b/templates/website.html
@@ -1874,10 +1874,14 @@
       <p class="hero-subtitle">Experience High-end games  on any device. No downloads. No expensive hardware. Just pure gaming.</p>
       
       <!-- Video Placeholder -->
+      <iframe class="video-placeholder" 
+    src="https://www.youtube.com/embed/OKQpnjIDvHs?autoplay=1&loop=1&mute=1&playlist=OKQpnjIDvHs" 
+    frameborder="0" 
+    allow="autoplay; encrypted-media" 
+    allowfullscreen>
+    </iframe>
       
-            <video autoplay loop muted playsinline class="video-placeholder">
-              <source src="{{ url_for('serve_res', filename='ads.mp4') }}" type="video/mp4">
-            </video>
+
      
       <div class="mini-carousel-wrapper">
         <h2>Screenshots</h2>
@@ -2738,4 +2742,5 @@ window.addEventListener('DOMContentLoaded', () => {
     </script>
 
 </body>
+
 </html>
