--- a/templates/website.html
+++ b/templates/website.html
@@ -1875,7 +1875,7 @@
       
       <!-- Video Placeholder -->
       <iframe class="video-placeholder" 
-    src="https://www.youtube.com/embed/OKQpnjIDvHs?autoplay=1&loop=1&mute=1&playlist=OKQpnjIDvHs&controls=0&modestbranding=1&rel=0&showinfo=0"
+    src="https://youtu.be/sZ2lsq7g32o"
     frameborder="0" 
     allow="autoplay; encrypted-media" 
     allowfullscreen>
@@ -2744,4 +2744,5 @@ window.addEventListener('DOMContentLoaded', () => {
 </body>
 
 </html>
+
 
