--- a/templates/website.html
+++ b/templates/website.html
@@ -1875,7 +1875,7 @@
       
       <!-- Video Placeholder -->
       <iframe class="video-placeholder" 
-    src="https://youtu.be/sZ2lsq7g32o"
+    src="https://www.youtube.com/embed/sZ2lsq7g32o?autoplay=1&loop=1&mute=1&playlist=sZ2lsq7g32o&controls=0&rel=0"
     frameborder="0" 
     allow="autoplay; encrypted-media" 
     allowfullscreen>
@@ -2744,5 +2744,6 @@ window.addEventListener('DOMContentLoaded', () => {
 </body>
 
 </html>
+
 
 
