--- a/templates/website-lite.html
+++ b/templates/website-lite.html
@@ -715,9 +715,12 @@
       <p class="hero-subtitle">Experience High-end games on any device. No downloads. No expensive hardware. Just pure gaming.</p>
       
       <div class="video-box">
-            <video autoplay loop muted playsinline class="video-placeholder">
-              <source src="{{ url_for('serve_res', filename='ads.mp4') }}" type="video/mp4">
-            </video>
+      <iframe class="video-placeholder" 
+    src="https://www.youtube.com/embed/sZ2lsq7g32o?autoplay=1&loop=1&mute=1&playlist=sZ2lsq7g32o&controls=0&rel=0"
+    frameborder="0" 
+    allow="autoplay; encrypted-media" 
+    allowfullscreen>
+    </iframe>
       </div>
       <div class="mini-carousel-wrapper">
         <div class="mini-carousel-box" id="miniCarouselBox">
@@ -1246,4 +1249,5 @@
         */
     </script>
 </body>
+
 </html>
