--- a/templates/installguide.html
+++ b/templates/installguide.html
@@ -306,12 +306,13 @@
                     For YouTube: https://www.youtube.com/embed/VIDEO_ID
                     For Vimeo: https://player.vimeo.com/video/VIDEO_ID
                 -->
-                     <iframe class="video-frame" 
-                        src="https://youtu.be/VFMQhC6hCNc?si=82FOx6LqEt8vSU-C?autoplay=1&loop=1&mute=1&playlist=sZ2lsq7g32o&controls=0&rel=0"
-                        frameborder="0" 
-                        allow="autoplay; encrypted-media" 
-                        allowfullscreen>
-                        </iframe>
+            <iframe class="video-frame"
+              src="https://www.youtube.com/embed/VFMQhC6hCNc?autoplay=1&loop=1&mute=1&playlist=VFMQhC6hCNc&controls=0&rel=0"
+              frameborder="0"
+              allow="autoplay; encrypted-media"
+              allowfullscreen>
+            </iframe>
+
             </div>
         </div>
     </div>
@@ -329,3 +330,4 @@
 </body>
 
 </html>
+
