--- a/templates/installguide.html
+++ b/templates/installguide.html
@@ -307,11 +307,12 @@
                     For Vimeo: https://player.vimeo.com/video/VIDEO_ID
                 -->
             <iframe class="video-frame"
-              src="https://www.youtube.com/embed/VFMQhC6hCNc?autoplay=1&loop=1&mute=1&playlist=VFMQhC6hCNc&controls=0&rel=0"
+              src="https://www.youtube.com/embed/VFMQhC6hCNc?loop=1&controls=0&rel=0&playlist=VFMQhC6hCNc"
               frameborder="0"
               allow="autoplay; encrypted-media"
               allowfullscreen>
             </iframe>
+
 
             </div>
         </div>
@@ -330,4 +331,5 @@
 </body>
 
 </html>
+
 
