--- a/templates/website-lite.html
+++ b/templates/website-lite.html
@@ -823,13 +823,13 @@
 
       
       <div class="download-btns">
-        <a href="https://drive.google.com/file/d/1OL1oEJT7WGXApEPmEfZ4hyheWWtpg9lj/view?usp=drive_link" class="btn">
+        <a href="https://drive.google.com/file/d/1OL1oEJT7WGXApEPmEfZ4hyheWWtpg9lj/view?usp=drive_link" class="btn" onclick="fbq('track', 'AndroidDownload');">
           <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
             <path d="M17.523 15.3414c-.5511 0-.9993-.4486-.9993-.9997s.4483-.9993.9993-.9993c.5511 0 .9993.4483.9993.9993.0001.5511-.4482.9997-.9993.9997m-11.046 0c-.5511 0-.9993-.4486-.9993-.9997s.4482-.9993.9993-.9993c.5511 0 .9993.4483.9993.9993 0 .5511-.4483.9997-.9993.9997m11.4045-6.02l1.9973-3.4592a.416.416 0 00-.1521-.5676.416.416 0 00-.5676.1521l-2.0223 3.503C15.5902 8.2439 13.8533 7.8508 12 7.8508s-3.5902.3931-5.1367 1.0989L4.841 5.4467a.4161.4161 0 00-.5677-.1521.4157.4157 0 00-.1521.5676l1.9973 3.4592C2.6889 11.1867.3432 14.6589 0 18.761h24c-.3435-4.1021-2.6892-7.5743-6.1185-9.4396"/>
           </svg>
           Download for Android
         </a>
-        <a href="https://drive.google.com/file/d/1vMn6UcITyqN2Qp0DpbM4gqRuQOwPO3SM/view?usp=drive_link" class="btn">
+        <a href="https://drive.google.com/file/d/1vMn6UcITyqN2Qp0DpbM4gqRuQOwPO3SM/view?usp=drive_link" class="btn" onclick="fbq('track', 'WindowsDownload');">
           <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
             <path d="M0 3.449L9.75 2.1v9.451H0m10.949-9.602L24 0v11.4H10.949M0 12.6h9.75v9.451L0 20.699M10.949 12.6H24V24l-12.9-1.801"/>
           </svg>
@@ -1268,4 +1268,5 @@
 </body>
 
 </html>
+
 
